--- a/MRTG.bib
+++ b/MRTG.bib
@@ -73,3 +73,11 @@ journal = {Engineering Physics International Conference, EPIC 2016}
 	url = {https://www.freertos.org/about-RTOS.html},
 	Note = {Consultado en diciembre 2020},
 }
+
+@online{Logicbus,
+	author = {Logicbus},
+	title = {"Fundamentos del protocolo Modbus"},
+	year = {2020},
+	url = {https://www.logicbus.com.mx/Modbus.php\#:~:text=Modbus\%20es\%20un\%20protocolo\%20de,controladores\%20l\'ogicos\%20programables\%20(PLCs).\&text=Es\%20el\%20protocolo\%20de\%20mayor,conexi\'on\%20de\%20dispositivos\%20electr\'onicos\%20industriales.},
+	Note = {Consultado en diciembre 2020},
+}
